--- a/10000hours.html
+++ b/10000hours.html
@@ -3,15 +3,60 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" href="./img/favicon.ico" />
         <link rel="stylesheet" href="./css/reset.css">
         <link rel="stylesheet" href="./css/10000hours.css">
         <title>1만 시간의 법칙</title>
     </head>
     <body>
-        <div class="container">
-            <header></header>
-            <main></main>
-            <footer></footer>
+        <div class="wrap">
+            <section class="header">
+                <h1 class="sr-only">1만 시간의 법칙</h1>
+                <img src="./img/title.png" sizes="(max-width:360px) 267px" alt="1만 시간의 법칙">
+            </section>
+            <section class="description">
+                <h2 class="sr-only">1만 시간의 법칙 설명</h2>
+                <p>"연습은 어제의 당신보다 당신을 더 낫게 만든다."</p>
+                <p>
+                    1만 시간의 법칙<span>은<br>
+                    어떤 분야의 전문가가 되기 위해서는<br>
+                    최소한 1만 시간의 훈련이 필요하다는 법칙이다.</span>
+                </p>
+            </section>
+            <section class="calculation">
+                <h2 class="sr-only">1만 시간의 법칙 계산</h2>
+                <p>
+                    나는 <input type="text" placeholder="예)프로그래밍"> <span>전문가가 될 것이다.</span>
+                </p>
+                <p>
+                    그래서 앞으로 매일 하루에 <input type="text" placeholder="예)5시간"> 시간씩 훈련할 것이다.
+                </p>
+                <button>나는 며칠 동안 훈련을 해야 1만 시간이 될까?</button>
+                <img src="./img/click.png" alt="">
+                <p>당신은 <span>프로그래밍</span> 전문가가 되기 위해서</p>
+                <p>대략 <span>5110</span> 일 이상 훈련하셔야 합니다! :)</p>
+            </section>
+            <section class="btn-group">
+                <h2 class="sr-only">1만 시간의 법칙 훈련 정보</h2>
+                <button id="showDialogBtn">훈련하러 가기 GO!GO!</button><button>공유하기</button>
+            </section>
+            <section class="footer">
+                <h2 class="sr-only">저작권 정보</h2>
+                <img src="./img/logo.png" alt="weniv">
+                <p>  
+                    ※ 본 서비스 내 이미지 및 콘텐츠의 저작권은 주식회사 WeNiv에 있습니다.<br>
+                    수정 및 재배포, 무단 도용 시 법적인 문제가 발생할 수 있습니다.
+                </p>
+            </section>
         </div>
+        <dialog id="dialog">
+            <div class="dialogWrap">
+                <p>화이팅!!♥♥♥</p>
+                <p>당신의 꿈을 응원합니다!</p>
+                <img src="./img/licat.png" alt="licat">
+                <button id="closeBtn">종료하고 진짜 훈련하러 가기 GO!GO!</button>
+            </div>
+        </dialog>
+        <script src="./js/10000hours.js"></script>
     </body>
 </html>
