W3C validation 체크 및 수정

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="./img/favicon.ico" />
+        <link rel="icon" href="./img/favicon.ico">
         <link rel="stylesheet" href="./css/reset.css">
         <link rel="stylesheet" href="./css/10000hours.css">
         <title>1만 시간의 법칙</title>
@@ -12,7 +12,7 @@
         <div class="wrap">
             <section class="header">
                 <h1 class="sr-only">1만 시간의 법칙</h1>
-                <img src="./img/title.png" sizes="(max-width:360px) 267px" alt="">
+                <img src="./img/title.png" alt="">
             </section>
             <section class="description">
                 <h2 class="sr-only">1만 시간의 법칙 설명</h2>
